--- a/Events.html
+++ b/Events.html
@@ -42,7 +42,7 @@
             </p>
         </div>
         <div>
-            <img src="defaulticon.jpg" alt="Event Logo">
+            <img src="pictures/defaulticon.jpg" alt="Event Logo">
             <div class="location">
                 <strong>Location: </strong>
                 Rotterdam, Beurs
