--- a/Home.html
+++ b/Home.html
@@ -12,11 +12,9 @@
 
     <!-- HERO -->
     <section class="hero">
-        <nav>
-            <a href="Home.html">Home</a>
-            <a href="Events.html">Events</a>
-            <a href="#">Contact</a>
-        </nav>
+        <!-- replaced inline nav with shared topbar -->
+        <div id="topbar"></div>
+
         <div class="hero-content">
             <h1>Home</h1>
         </div>
@@ -34,6 +32,20 @@
             </p>
         </div>
     </section>
+
+    <!-- loader for shared topbar -->
+    <script>
+        // load the shared topbar fragment into #topbar
+        (function () {
+            fetch('topbar.html')
+                .then(function (r) { return r.text(); })
+                .then(function (html) { document.getElementById('topbar').innerHTML = html; })
+                .catch(function () {
+                    // fallback if fetch fails
+                    document.getElementById('topbar').innerHTML = '<nav><a href="Home.html">Home</a><a href="Events.html">Events</a><a href="#">Contact</a></nav>';
+                });
+        })();
+    </script>
 
 </body>
 
