--- a/topbar.html
+++ b/topbar.html
@@ -1,5 +1,12 @@
-<nav class="topbar">
-	<a href="Home.html">Home</a>
-	<a href="Events.html">Events</a>
-	<a href="#">Contact</a>
+<nav class="topbar" role="navigation">
+	<div class="logo">
+		<a href="Home.html"><img src="pictures/defaulticon.jpg" alt="Logo"></a>
+	</div>
+	<div class="nav-links">
+		<a href="Home.html">Home</a>
+		<a href="Dashboard.html">Dashboard</a>
+		<a href="About.html">About</a>
+		<a href="Contact.html">Contact</a>
+	</div>
+	<div class="welcome">Welcome USER</div>
 </nav>
