--- a/Events.html
+++ b/Events.html
@@ -17,7 +17,6 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Events</h1>
-            <p>by San Diego Magazine</p>
         </div>
     </section>
 
@@ -32,6 +31,7 @@
     <!-- Event Description -->
     <section class="overview">
         <div>
+            <img src="pictures/defaulticon.jpg" alt="Event Image" class="event-img">
             <h2>Event Details</h2>
             <p>
                 ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro fugiat similique itaque? Aut dolore
