--- a/Events.html
+++ b/Events.html
@@ -10,13 +10,13 @@
 
 <body>
 
-    <!-- inject shared topbar here so it sits above the hero -->
     <div id="topbar"></div>
 
     <!-- HERO -->
     <section class="hero">
         <div class="hero-content">
             <h1>Events</h1>
+
         </div>
     </section>
 
@@ -38,6 +38,8 @@
                 nulla fugiat est veritatis, assumenda commodi error atque vitae aliquid aspernatur quia, neque
                 laboriosam deleniti tempora!
             </p>
+            <iframe width="700" height="400" src="https://www.youtube.com/embed/sDqiFFZ0MWw">
+            </iframe>
         </div>
         <div>
             <img src="pictures/defaulticon.jpg" alt="Event Logo">
