Button alert Register

--- a/Events.html
+++ b/Events.html
@@ -52,7 +52,7 @@
                 AHOY Rotterdam
             </div>
             <div>
-                <button>Register</button>
+                <button id="registerBtn">Register</button>
             </div>
         </div>
     </section>
@@ -72,6 +72,13 @@
                         + '<div class="welcome">Welcome USER</div></nav>';
                 });
         })();
+
+        //Alert register
+        const registerButton = document.getElementById("registerBtn");
+        registerButton.addEventListener("click", function () {
+            alert("sorru Registration is Closed");
+        });
+    </script>
     </script>
 
 </body>
