Add dark mode toggle

--- a/Login.html
+++ b/Login.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+    <!-- Dark mode toggle -->
+    <button id="darkModeBtn">🌙 Dark Mode</button>
+    <script src="darkmode.js" defer></script>
+
 <div id="topbar"></div>
 
 <section class="hero hero-auth">
