--- a/About.html
+++ b/About.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <!-- Dark mode toggle -->
+    <button id="darkModeBtn">🌙 Dark Mode</button>
+    <script src="darkmode.js" defer></script>
 
     <!-- inject shared topbar here so it sits above the hero -->
     <div id="topbar"></div>
