--- a/Dashboard.html
+++ b/Dashboard.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+    <!-- Dark mode toggle -->
+    <button id="darkModeBtn">🌙 Dark Mode</button>
+    <script src="darkmode.js" defer></script>
 
     <div id="topbar"></div>
 
