--- a/Register.html
+++ b/Register.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <!-- Dark mode toggle -->
+    <button id="darkModeBtn">🌙 Dark Mode</button>
+    <script src="darkmode.js" defer></script>
 <div id="topbar"></div>
 
 <section class="hero hero-auth">
