--- a/frontend/Contact/Contact.html
+++ b/frontend/Contact/Contact.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../shared/base.css">
+    <link rel="stylesheet" href="../shared/topbar.css">
+    <link rel="stylesheet" href="../shared/darkmode.css">
+    <link rel="stylesheet" href="contact.css">
+
 </head>
 
 <body>
