--- a/frontend/Dashboard/Dashboard.html
+++ b/frontend/Dashboard/Dashboard.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../shared/base.css">
+    <link rel="stylesheet" href="../shared/topbar.css">
+    <link rel="stylesheet" href="../shared/darkmode.css">
+    <link rel="stylesheet" href="dashboard.css">
+
     <style>
         /* small overrides for the dashboard page only */
     </style>
