--- a/frontend/Events/Events.html
+++ b/frontend/Events/Events.html
@@ -5,13 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe Layout</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="events.css">
+    <!-- shared style-->
+    <link rel="stylesheet" href="../shared/base.css">
+    <link rel="stylesheet" href="../shared/topbar.css">
+    <link rel="stylesheet" href="../shared/darkmode.css">
+
 </head>
 
 <body>
     <!-- Dark mode toggle -->
     <button id="darkModeBtn">🌙 Dark Mode</button>
-    <script src="darkmode.js" defer></script>
+    <script src="../Shared/darkmode.js" defer></script>
 
     <div id="topbar"></div>
 
