--- a/frontend/About/About.html
+++ b/frontend/About/About.html
@@ -50,9 +50,10 @@
                 .then(function (r) { return r.text(); })
                 .then(function (html) { document.getElementById('topbar').innerHTML = html; })
                 .catch(function () {
+                    // fallback if fetch fails (simple structure)
                     document.getElementById('topbar').innerHTML =
-                        '<nav class="topbar"><div class="logo"><a href="Home.html"><img src="pictures/defaulticon.jpg" alt="Logo"></a></div>'
-                        + '<div class="nav-links"><a href="Home.html">Home</a><a href="Dashboard.html">Dashboard</a><a href="About.html">About</a><a href="Contact.html">Contact</a></div>'
+                        '<nav class="topbar"><div class="logo"><a href="../Home/Home.html"><img src="pictures/defaulticon.jpg" alt="Logo"></a></div>'
+                        + '<div class="nav-links"><a href="../Home/Home.html">Home</a><a href="../Dashboard/Dashboard.html">Dashboard</a><a href="../About/About.html">About</a><a href="../Contact/Contact.html">Contact</a></div>'
                         + '<div class="welcome">Welcome USER</div></nav>';
                 });
         })();
