--- a/frontend/Shared/topbar.html
+++ b/frontend/Shared/topbar.html
@@ -3,7 +3,7 @@
 		<a href="Home.html"><img src="pictures/defaulticon.jpg" alt="Logo"></a>
 	</div>
 	<div class="nav-links">
-		<a href="Home.html">Home</a>
+		<a href="../Home/Home.html">Home</a>
 		<a href="Dashboard.html">Dashboard</a>
 		<a href="About.html">About</a>
 		<a href="Contact.html">Contact</a>
