--- a/modal.html
+++ b/modal.html
@@ -73,7 +73,7 @@
 <body>
     <!-- Dark mode toggle -->
     <button id="darkModeBtn">🌙 Dark Mode</button>
-    <script src="darkmode.js" defer></script>
+    <script src="../Shared/darkmode.js" defer></script>
 
     <div class="event-card">
         <h3>Sample Event</h3>
