--- a/frontend/Dashboard/Dashboard.html
+++ b/frontend/Dashboard/Dashboard.html
@@ -18,7 +18,7 @@
 <body>
     <!-- Dark mode toggle -->
     <button id="darkModeBtn">🌙 Dark Mode</button>
-    <script src="darkmode.js" defer></script>
+    <script src="../Shared/darkmode.js" defer></script>
 
     <div id="topbar"></div>
 
