--- a/frontend/Home/Home.html
+++ b/frontend/Home/Home.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Dark mode toggle -->
     <button id="darkModeBtn">🌙 Dark Mode</button>
-    <script src="darkmode.js" defer></script>
+    <script src="../Shared/darkmode.js" defer></script>
 
     <!-- inject shared topbar here so it sits above the hero -->
     <div id="topbar"></div>
@@ -49,7 +49,7 @@
                     <h3>Sample Event One</h3>
                     <p class="meta">Rotterdam • May 10-12, 2025</p>
                     <p class="desc">Short description of the event. A quick summary that fits two lines.</p>
-                    <a class="btn" href="Events.html">View Details</a>
+                    <a class="btn" href="../Events/Events.html">View Details</a>
                 </div>
             </article>
 
@@ -59,7 +59,7 @@
                     <h3>Sample Event Two</h3>
                     <p class="meta">Rotterdam • June 20-22, 2025</p>
                     <p class="desc">Short description for the second event. Keep copy brief.</p>
-                    <a class="btn" href="Events.html">View Details</a>
+                    <a class="btn" href="../Events/Events.html">View Details</a>
                 </div>
             </article>
 
@@ -69,7 +69,7 @@
                     <h3>Sample Event Three</h3>
                     <p class="meta">Rotterdam • July 8-9, 2025</p>
                     <p class="desc">Another short line of descriptive text to balance the card.</p>
-                    <a class="btn" href="Events.html">View Details</a>
+                    <a class="btn" href="../Events/Events.html">View Details</a>
                 </div>
             </article>
         </div>
