--- a/frontend/Home/Home.html
+++ b/frontend/Home/Home.html
@@ -59,16 +59,16 @@
                     <h3>Sample Event Two</h3>
                     <p class="meta">Rotterdam • June 20-22, 2025</p>
                     <p class="desc">Short description for the second event. Keep copy brief.</p>
-                    <a class="btn" href="../Events/Events.html">View Details</a>
+                    <a id="eventBtn" class="btn" href="../Events/Events.html">View Details</a>
                 </div>
             </article>
             <article class="event-card">
                 <div class="card-media" style="background-image: url('pictures/defaulticon.jpg')"></div>
                 <div class="card-body">
-                    <h3>Sample Event Two</h3>
+                    <h3>Sample Event Three</h3>
                     <p class="meta">Rotterdam • June 20-22, 2025</p>
                     <p class="desc">Short description for the second event. Keep copy brief.</p>
-                    <a class="btn" href="../Events/Events.html">View Details</a>
+                    <a id="eventBtn" class="btn" href="../Events/Events.html">View Details</a>
                 </div>
             </article>
         </div>
