Typescript implementation events page

--- a/frontend/Events/Events.html
+++ b/frontend/Events/Events.html
@@ -66,16 +66,7 @@
     </section>
 
     <!-- loader for shared topbar -->
-    <script>
-        // load the shared topbar fragment into #topbar
-
-        //Alert register
-        const registerButton = document.getElementById("registerBtn");
-        registerButton.addEventListener("click", function () {
-            alert("sorru Registration is Closed");
-        });
-    </script>
-    </script>
+    <script src="../compiled/Events.js"></script>
 
 </body>
 
