--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>DYPLORER</title>
+    <title>Index</title>
 </head>
 
 <body>
-    <h1>DYPLORER</h1>
+    <h1>Index</h1>
     <ul>
         <li><a href="Events/events.html">Events Page</a></li>
         <li><a href="Home/Home.html">Home Page</a></li>
