--- a/frontend/Dashboard/Dashboard.html
+++ b/frontend/Dashboard/Dashboard.html
@@ -105,7 +105,7 @@
 
     <script>
         (function () {
-            fetch('topbar.html')
+            fetch('../Shared/topbar.html')
                 .then(function (r) { return r.text(); })
                 .then(function (html) { document.getElementById('topbar').innerHTML = html; })
                 .catch(function () {
