Update home javascript to typesropt
Update Home

--- a/frontend/Home/Home.html
+++ b/frontend/Home/Home.html
@@ -49,7 +49,7 @@
                     <h3>Sample Event One</h3>
                     <p class="meta">Rotterdam • May 10-12, 2025</p>
                     <p class="desc">Short description of the event. A quick summary that fits two lines.</p>
-                    <a id="eventBtn" class="btn" href="../Events/Events.html">View Details</a>
+                    <button id="eventBtn" class="btn" href="../Events/Events.html">View Details</button>
                 </div>
             </article>
 
@@ -59,7 +59,7 @@
                     <h3>Sample Event Two</h3>
                     <p class="meta">Rotterdam • June 20-22, 2025</p>
                     <p class="desc">Short description for the second event. Keep copy brief.</p>
-                    <a id="eventBtn" class="btn" href="../Events/Events.html">View Details</a>
+                    <a id="" class="btn" href="../Events/Events.html">View Details</a>
                 </div>
             </article>
             <article class="event-card">
@@ -68,7 +68,7 @@
                     <h3>Sample Event Three</h3>
                     <p class="meta">Rotterdam • June 20-22, 2025</p>
                     <p class="desc">Short description for the second event. Keep copy brief.</p>
-                    <a id="eventBtn" class="btn" href="../Events/Events.html">View Details</a>
+                    <a id="" class="btn" href="../Events/Events.html">View Details</a>
                 </div>
             </article>
         </div>
@@ -82,7 +82,7 @@
     </section>
 
     <!-- loader for shared topbar -->
-    <script src="../Home/Home.js"></script>
+    <script src="../compiled/Home/Home.js"></script>
 
 
 </body>
