--- a/frontend/Events/Events.html
+++ b/frontend/Events/Events.html
@@ -66,7 +66,7 @@
     </section>
 
     <!-- loader for shared topbar -->
-    <script src="../compiled/Events.js"></script>
+    <script src="../compiled/Events/Events.js"></script>
 
 </body>
 
