Make the list of tournaments in typescript. Remove them from html.

--- a/frontend/Dashboard/Dashboard.html
+++ b/frontend/Dashboard/Dashboard.html
@@ -84,62 +84,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>CS2 Global Championship 2025</td>
-                            <td>Counter-Strike 2</td>
-                            <td><span class="status-pill">Registration Open</span></td>
-                            <td>1/32</td>
-                            <td>3/15/2025</td>
-                            <td>View · Edit · Delete</td>
-                        </tr>
-                        <tr>
-                            <td>VALORANT Champions Tour</td>
-                            <td>VALORANT</td>
-                            <td><span class="status-pill status-completed">Completed</span></td>
-                            <td>32/32</td>
-                            <td>4/01/2025</td>
-                            <td>View · Edit · Delete</td>
-                        </tr>
-                        <tr>
-                            <td>Arena Clash - Spring Cup</td>
-                            <td>Arena FPS</td>
-                            <td><span class="status-pill">Ongoing</span></td>
-                            <td>8/64</td>
-                            <td>9/05/2025</td>
-                            <td>View · Edit · Delete</td>
-                        </tr>
-                        <tr>
-                            <td>Rocket Rumble Invitational</td>
-                            <td>Rocket League</td>
-                            <td><span class="status-pill">Registration Open</span></td>
-                            <td>3/16</td>
-                            <td>10/12/2025</td>
-                            <td>View · Edit · Delete</td>
-                        </tr>
-                        <tr>
-                            <td>Super Smash Showdown</td>
-                            <td>Super Smash Bros</td>
-                            <td><span class="status-pill status-completed">Completed</span></td>
-                            <td>16/16</td>
-                            <td>2/20/2025</td>
-                            <td>View · Edit · Delete</td>
-                        </tr>
-                        <tr>
-                            <td>Indie Cup: Open Qualifiers</td>
-                            <td>Various</td>
-                            <td><span class="status-pill">Cancelled</span></td>
-                            <td>0/64</td>
-                            <td>5/01/2025</td>
-                            <td>View · Edit · Delete</td>
-                        </tr>
-                        <tr>
-                            <td>LAN Heroes - Autumn League</td>
-                            <td>Multiple</td>
-                            <td><span class="status-pill">Registration Open</span></td>
-                            <td>12/24</td>
-                            <td>11/18/2025</td>
-                            <td>View · Edit · Delete</td>
-                        </tr>
+                        <!-- Rows are generated dynamically by Dashboard.ts from a tournaments data array. -->
                     </tbody>
                 </table>
             </div>
