--- a/frontend/Dashboard/Dashboard.html
+++ b/frontend/Dashboard/Dashboard.html
@@ -19,6 +19,7 @@
     <!-- Dark mode toggle -->
     <button id="darkModeBtn">🌙 Dark Mode</button>
     <script src="../Shared/darkmode.js" defer></script>
+    <script src="../Shared/topbar.js" defer></script>
 
     <div id="topbar"></div>
 
