Added topbar to all pages. Removed dupe login and register.

--- a/frontend/Contact/Contact.html
+++ b/frontend/Contact/Contact.html
@@ -16,6 +16,7 @@
     <!-- Dark mode toggle -->
     <button id="darkModeBtn">🌙 Dark Mode</button>
     <script src="../Shared/darkmode.js" defer></script>
+    <script src="../Shared/topbar.js" defer></script>
 
     <!-- inject shared topbar here so it sits above the hero -->
     <div id="topbar"></div>
