--- a/frontend/Events/Events.html
+++ b/frontend/Events/Events.html
@@ -16,7 +16,7 @@
 <body>
     <!-- Dark mode toggle -->
     <button id="darkModeBtn">🌙 Dark Mode</button>
-    <script src="../Shared/darkmode.js" defer></script>
+    <script src="../compiled/Darkmode/darkmode.js" defer></script>
     <script src="../Shared/topbar.js" defer></script>
 
     <div id="topbar"></div>
