--- a/frontend/Shared/topbar.html
+++ b/frontend/Shared/topbar.html
@@ -4,9 +4,9 @@
 	</div>
 	<div class="nav-links">
 		<a href="../Home/Home.html">Home</a>
-		<a href="Dashboard.html">Dashboard</a>
-		<a href="About.html">About</a>
-		<a href="Contact.html">Contact</a>
+		<a href="../Dashboard/Dashboard.html">Dashboard</a>
+		<a href="../About/About.html">About</a>
+		<a href="../Contact/Contact.html">Contact</a>
 	</div>
 	<div class="welcome">Welcome USER</div>
 </nav>
