Fixed routing within Login and Register

--- a/frontend/Login/Login.html
+++ b/frontend/Login/Login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header class="topbar">
-  <a class="nav-btn left" href="../../Home.html">
+  <a class="nav-btn left" href="../Home/Home.html">
     <span class="emoji">🎮</span><span class="label">Home</span>
   </a>
   <nav class="right">
