Adjust the location of topbar script.

--- a/frontend/Dashboard/Dashboard.html
+++ b/frontend/Dashboard/Dashboard.html
@@ -19,9 +19,10 @@
     <!-- Dark mode toggle -->
     <button id="darkModeBtn">🌙 Dark Mode</button>
     <script src="../compiled/Darkmode/darkmode.js" defer></script>
-    <script src="../Shared/topbar.js" defer></script>
-
+    
+    <!-- Top navigation bar -->
     <div id="topbar"></div>
+    <script src="../Shared/topbar.js" defer></script>
 
     <main class="container">
         <section class="hero">
