--- a/frontend/Home/Home.html
+++ b/frontend/Home/Home.html
@@ -15,10 +15,10 @@
     <!-- Dark mode toggle -->
     <button id="darkModeBtn">🌙 Dark Mode</button>
     <script src="../compiled/Darkmode/darkmode.js" defer></script>
-    <script src="../Shared/topbar.js" defer></script>
 
     <!-- inject shared topbar here so it sits above the hero -->
     <div id="topbar"></div>
+    <script src="../compiled/Shared/topbar.js" defer></script>
 
     <!-- HERO -->
     <section class="hero">
