shared topbar for home

--- a/frontend/Home/Home.html
+++ b/frontend/Home/Home.html
@@ -18,7 +18,7 @@
 
     <!-- inject shared topbar here so it sits above the hero -->
     <div id="topbar"></div>
-    <script src="../compiled/Shared/topbar.js" defer></script>
+    <script src="../Shared/topbar.js" defer></script>
 
     <!-- HERO -->
     <section class="hero">
