Remove Compiled folder and move back all .js and .ts to the corresponding folders.

--- a/frontend/Events/Events.html
+++ b/frontend/Events/Events.html
@@ -16,11 +16,11 @@
 <body>
     <!-- Dark mode toggle -->
     <button id="darkModeBtn">🌙 Dark Mode</button>
-    <script src="../compiled/Darkmode/darkmode.js" defer></script>
-    <script src="../Shared/topbar.js" defer></script>
-
+    <script src="../Shared/darkmode.js" defer></script>
+    
     <div id="topbar"></div>
-
+    <script src="../Shared/topbar.js" defer></script>
+    
     <!-- HERO -->
     <section class="hero">
         <div class="hero-content">
