--- a/frontend/About/About.html
+++ b/frontend/About/About.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Dark mode toggle -->
     <button id="darkModeBtn">🌙 Dark Mode</button>
-    <script src="../compiled/Darkmode/darkmode.js" defer></script>
+    <script src="../Shared/darkmode.js" defer></script>
 
     <!-- inject shared topbar here so it sits above the hero -->
     <div id="topbar"></div>
