The .js file call in .html folders changed from ../compiled/foldername/filename.js > ..Foldername/filename.js

--- a/frontend/Dashboard/Dashboard.html
+++ b/frontend/Dashboard/Dashboard.html
@@ -94,7 +94,7 @@
     </main>
 
     <!-- Load dashboard behaviour (topbar + tournament search) -->
-    <script src="../compiled/Dashboard/Dashboard.js" defer></script>
+    <script src="../Dashboard/Dashboard.js" defer></script>
 
 </body>
 
