--- a/frontend/Events/Events.html
+++ b/frontend/Events/Events.html
@@ -67,7 +67,7 @@
     </section>
 
     <!-- loader for shared topbar -->
-    <script src="../compiled/Events/Events.js"></script>
+    <script src="../Events/Events.js"></script>
 
 </body>
 
