--- a/frontend/Contact/Contact.html
+++ b/frontend/Contact/Contact.html
@@ -54,11 +54,15 @@
                 .then(function (r) { return r.text(); })
                 .then(function (html) { document.getElementById('topbar').innerHTML = html; })
                 .catch(function () {
-                    // fallback if fetch fails (simple structure)
-                    document.getElementById('topbar').innerHTML =
-                        '<nav class="topbar"><div class="logo"><a href="../Home/Home.html"><img src="pictures/defaulticon.jpg" alt="Logo"></a></div>'
-                        + '<div class="nav-links"><a href="../Home/Home.html">Home</a><a href="../Dashboard/Dashboard.html">Dashboard</a><a href="../About/About.html">About</a><a href="../Contact/Contact.html">Contact</a></div>'
-                        + '<div class="welcome">Welcome USER</div></nav>';
+                                        // fallback if fetch fails (simple structure)
+                                        document.getElementById('topbar').innerHTML =
+                                                '<nav class="topbar">'
+                                                + '<div class="topbar-inner">'
+                                                    + '<div class="logo"><a href="../Home/Home.html"><img src="pictures/defaulticon.jpg" alt="Logo"></a></div>'
+                                                    + '<div class="nav-links"><a href="../Home/Home.html">Home</a><a href="../Dashboard/Dashboard.html">Dashboard</a><a href="../About/About.html">About</a><a href="../Contact/Contact.html">Contact</a></div>'
+                                                    + '<div class="welcome">Welcome USER</div>'
+                                                + '</div>'
+                                                + '</nav>';
                 });
         })();
     </script>
