--- a/frontend/Home/Home.html
+++ b/frontend/Home/Home.html
@@ -83,7 +83,7 @@
     </section>
 
     <!-- loader for shared topbar -->
-    <script src="../compiled/Home/Home.js"></script>
+    <script src="../Home/Home.js"></script>
 
 
 </body>
