Fix all ../Pictures/image.jpg calls in html files so that all icons are visible.

--- a/frontend/About/About.html
+++ b/frontend/About/About.html
@@ -36,7 +36,7 @@
             </p>
         </div>
         <div>
-            <img src="pictures/defaulticon.jpg" alt="About image">
+            <img src="../Pictures/defaulticon.jpg" alt="About image">
             <div class="location">
                 <strong>Headquarters: </strong>
                 Rotterdam, Netherlands
@@ -55,7 +55,7 @@
                                             document.getElementById('topbar').innerHTML =
                                                     '<nav class="topbar">'
                                                     + '<div class="topbar-inner">'
-                                                        + '<div class="logo"><a href="../Home/Home.html"><img src="pictures/defaulticon.jpg" alt="Logo"></a></div>'
+                                                          + '<div class="logo"><a href="../Home/Home.html"><img src="../Pictures/defaulticon.jpg" alt="Logo"></a></div>'
                                                         + '<div class="nav-links"><a href="../Home/Home.html">Home</a><a href="../Dashboard/Dashboard.html">Dashboard</a><a href="../About/About.html">About</a><a href="../Contact/Contact.html">Contact</a></div>'
                                                         + '<div class="welcome">Welcome USER</div>'
                                                     + '</div>'
