--- a/frontend/Events/Events.html
+++ b/frontend/Events/Events.html
@@ -40,7 +40,7 @@
     <!-- Event Description -->
     <section class="overview">
         <div>
-            <img src="pictures/defaulticon.jpg" alt="Event Image" class="event-img">
+            <img src="../Pictures/defaulticon.jpg" alt="Event Image" class="event-img">
             <h2>Event Details</h2>
             <p>
                 ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro fugiat similique itaque? Aut dolore
@@ -51,7 +51,7 @@
             </iframe>
         </div>
         <div>
-            <img src="pictures/defaulticon.jpg" alt="Event Logo">
+            <img src="../Pictures/defaulticon.jpg" alt="Event Logo">
             <div class="location">
                 <strong>Location: </strong>
                 Rotterdam, Netherlands
