--- a/frontend/Home/Home.html
+++ b/frontend/Home/Home.html
@@ -45,7 +45,7 @@
         <div class="events-grid">
             <!-- Repeatable event card -->
             <article class="event-card">
-                <div class="card-media" style="background-image: url('pictures/defaulticon.jpg')"></div>
+                <div class="card-media" style="background-image: url('../Pictures/defaulticon.jpg')"></div>
                 <div class="card-body">
                     <h3>Sample Event One</h3>
                     <p class="meta">Rotterdam • May 10-12, 2025</p>
@@ -55,7 +55,7 @@
             </article>
 
             <article class="event-card">
-                <div class="card-media" style="background-image: url('pictures/defaulticon.jpg')"></div>
+                <div class="card-media" style="background-image: url('../Pictures/defaulticon.jpg')"></div>
                 <div class="card-body">
                     <h3>Sample Event Two</h3>
                     <p class="meta">Rotterdam • June 20-22, 2025</p>
@@ -64,7 +64,7 @@
                 </div>
             </article>
             <article class="event-card">
-                <div class="card-media" style="background-image: url('pictures/defaulticon.jpg')"></div>
+                <div class="card-media" style="background-image: url('../Pictures/defaulticon.jpg')"></div>
                 <div class="card-body">
                     <h3>Sample Event Three</h3>
                     <p class="meta">Rotterdam • June 20-22, 2025</p>
