--- a/frontend/Shared/topbar.html
+++ b/frontend/Shared/topbar.html
@@ -1,6 +1,6 @@
 <nav class="topbar" role="navigation">
 	<div class="logo">
-		<a href="Home.html"><img src="pictures/defaulticon.jpg" alt="Logo"></a>
+		<a href="Home.html"><img src="../Pictures/defaulticon.jpg" alt="Logo"></a>
 	</div>
 	<div class="nav-links">
 		<a href="../Home/Home.html">Home</a>
