--- a/frontend/Contact/Contact.html
+++ b/frontend/Contact/Contact.html
@@ -39,7 +39,7 @@
             </p>
         </div>
         <div>
-            <img src="pictures/defaulticon.jpg" alt="Contact image">
+            <img src="../Pictures/defaulticon.jpg" alt="Contact image">
             <div class="location">
                 <strong>Office: </strong>
                 Rotterdam, Netherlands
@@ -58,7 +58,7 @@
                                         document.getElementById('topbar').innerHTML =
                                                 '<nav class="topbar">'
                                                 + '<div class="topbar-inner">'
-                                                    + '<div class="logo"><a href="../Home/Home.html"><img src="pictures/defaulticon.jpg" alt="Logo"></a></div>'
+                                                    + '<div class="logo"><a href="../Home/Home.html"><img src="../Pictures/defaulticon.jpg" alt="Logo"></a></div>'
                                                     + '<div class="nav-links"><a href="../Home/Home.html">Home</a><a href="../Dashboard/Dashboard.html">Dashboard</a><a href="../About/About.html">About</a><a href="../Contact/Contact.html">Contact</a></div>'
                                                     + '<div class="welcome">Welcome USER</div>'
                                                 + '</div>'
